--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ author:
       icon: "fas fa-fw fa-envelope-square"
       # url: mailto:your.name@email.com
     - label: "Linkedin"
-      icon: "fas fa-fw fa-linkedin"
+      icon: "fab fa-linkedin
       url: "https://www.linkedin.com/in/pablokauffman/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
