--- a/_config.yml
+++ b/_config.yml
@@ -260,16 +260,16 @@ tag_archive:
   type: liquid
   path: /tags/
 # https://github.com/jekyll/jekyll-archives
-# jekyll-archives:
-#   enabled:
+ jekyll-archives:
+   enabled:
 #     - categories
-#     - tags
-#   layouts:
+     - tags
+   layouts:
 #     category: archive-taxonomy
-#     tag: archive-taxonomy
-#   permalinks:
+     tag: archive-taxonomy
+   permalinks:
 #     category: /categories/:name/
-#     tag: /tags/:name/
+     tag: /tags/:name/
 
 
 # HTML Compression
